# PaliiihorPW2024

./: palii  palii.pub  pyproject.toml
Pro/: .gitignore  Adress_book.py  Assistent.py  Comands.py  addressbook.pkl  congratulation_date.txt  parser_txt.py  users_inform.txt
