[tool.poetry]
name = "paliiiorpw2024"
version = "0.1.0"
description = ""
authors = ["Ihor Palii <paliiihor69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.20.0"
django = "^5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
